First success run version of Quic-Agg-v1.0

--- a/scratch/test.ipynb
+++ b/scratch/test.ipynb
@@ -2,7 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "fe5c7b10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "cd ..\n",
+    "# ./ns3 clean 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/agg-reno-100.log\n",
+    "# ./ns3 configure --disable-werror 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" >> scratch/agg-reno-100.log\n",
+    "./ns3 run scratch/innetwork-test.cc -- --vsize=3000 --topotype=1  2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/agg-reno-100.log\n",
+    "# ./ns3 run scratch/innetwork-test.cc -- --vsize=3000 --topotype=1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4a78041b",
    "metadata": {},
    "outputs": [
@@ -12,13 +27,12 @@
      "text": [
       "SHELL=/bin/bash\n",
       "PYTHONUNBUFFERED=1\n",
-      "BAKE_HOME=/home/dd/ns-3-quic-agg/bake\n",
       "PYTHON_FROZEN_MODULES=on\n",
       "ELECTRON_RUN_AS_NODE=1\n",
-      "VSCODE_AMD_ENTRYPOINT=vs/workbench/api/node/extensionHostProcess\n",
       "PWD=/home/dd/ns-3-quic-agg-zhuoxu/ns-allinone-3.42/ns-3.42\n",
       "LOGNAME=dd\n",
       "XDG_SESSION_TYPE=tty\n",
+      "VSCODE_ESM_ENTRYPOINT=vs/workbench/api/node/extensionHostProcess\n",
       "PYDEVD_IPYTHON_COMPATIBLE_DEBUGGING=1\n",
       "MOTD_SHOWN=pam\n",
       "HOME=/home/dd\n",
@@ -29,12 +43,12 @@
       "PYDEVD_USE_FRAME_EVAL=NO\n",
       "VSCODE_AGENT_FOLDER=/home/dd/.vscode-server\n",
       "CLICOLOR=1\n",
+      "VSCODE_L10N_BUNDLE_LOCATION=\n",
       "CLICOLOR_FORCE=1\n",
-      "SSH_CONNECTION=10.7.8.180 52611 192.168.1.183 22\n",
+      "SSH_CONNECTION=10.7.8.180 57762 192.168.1.183 22\n",
       "LESSCLOSE=/usr/bin/lesspipe %s %s\n",
       "XDG_SESSION_CLASS=user\n",
       "VSCODE_HANDLES_SIGPIPE=true\n",
-      "PYTHONPATH=/home/dd/ns-3-quic-agg/bake/build/lib:/home/dd/ns-3-quic-agg/bake/build/lib\n",
       "TERM=xterm-color\n",
       "LESSOPEN=| /usr/bin/lesspipe %s\n",
       "USER=dd\n",
@@ -43,24 +57,50 @@
       "SHLVL=1\n",
       "PAGER=cat\n",
       "VSCODE_CWD=/home/dd\n",
-      "XDG_SESSION_ID=1455\n",
+      "XDG_SESSION_ID=1650\n",
       "MPLBACKEND=module://matplotlib_inline.backend_inline\n",
-      "LD_LIBRARY_PATH=/home/dd/ns-3-quic-agg/bake/build/lib\n",
+      "LD_LIBRARY_PATH=/home/dd/ns-3-quic-agg-zhuoxu/ns-allinone-3.42/ns-3.42/build/lib\n",
       "XDG_RUNTIME_DIR=/run/user/1000\n",
       "SSL_CERT_FILE=/usr/lib/ssl/certs/ca-certificates.crt\n",
-      "SSH_CLIENT=10.7.8.180 52611 22\n",
-      "VSCODE_CLI_REQUIRE_TOKEN=b3332877-0dc6-4580-bf92-922ed3d496cc\n",
+      "SSH_CLIENT=10.7.8.180 57762 22\n",
+      "VSCODE_CLI_REQUIRE_TOKEN=2577b335-1882-4e5a-8973-18851a0fd19a\n",
       "XDG_DATA_DIRS=/usr/local/share:/usr/share:/var/lib/snapd/desktop\n",
-      "BROWSER=/home/dd/.vscode-server/cli/servers/Stable-384ff7382de624fb94dbaf6da11977bba1ecd427/server/bin/helpers/browser.sh\n",
-      "PATH=/bin:/home/dd/.vscode-server/cli/servers/Stable-384ff7382de624fb94dbaf6da11977bba1ecd427/server/bin/remote-cli:/home/dd/.local/bin:/home/dd/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin:/home/dd/ns-3-quic-agg/bake/build/bin:/home/dd/.vscode-server/cli/servers/Stable-384ff7382de624fb94dbaf6da11977bba1ecd427/server/bin/remote-cli:/home/dd/.local/bin:/home/dd/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin:/home/dd/ns-3-quic-agg/bake/build/bin\n",
+      "BROWSER=/home/dd/.vscode-server/cli/servers/Stable-912bb683695358a54ae0c670461738984cbb5b95/server/bin/helpers/browser.sh\n",
+      "PATH=/bin:/home/dd/.vscode-server/cli/servers/Stable-912bb683695358a54ae0c670461738984cbb5b95/server/bin/remote-cli:/home/dd/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin:/home/dd/.vscode-server/cli/servers/Stable-912bb683695358a54ae0c670461738984cbb5b95/server/bin/remote-cli:/home/dd/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin\n",
       "DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus\n",
-      "VSCODE_NLS_CONFIG={\"userLocale\":\"en\",\"osLocale\":\"en\",\"resolvedLanguage\":\"en\",\"defaultMessagesFile\":\"/home/dd/.vscode-server/cli/servers/Stable-384ff7382de624fb94dbaf6da11977bba1ecd427/server/out/nls.messages.json\",\"locale\":\"en\",\"availableLanguages\":{}}\n",
+      "VSCODE_NLS_CONFIG={\"userLocale\":\"en\",\"osLocale\":\"en\",\"resolvedLanguage\":\"en\",\"defaultMessagesFile\":\"/home/dd/.vscode-server/cli/servers/Stable-912bb683695358a54ae0c670461738984cbb5b95/server/out/nls.messages.json\",\"locale\":\"en\",\"availableLanguages\":{}}\n",
       "VSCODE_HANDLES_UNCAUGHT_ERRORS=true\n",
       "OLDPWD=/home/dd/ns-3-quic-agg-zhuoxu/ns-allinone-3.42/ns-3.42/scratch\n",
-      "VSCODE_IPC_HOOK_CLI=/run/user/1000/vscode-ipc-5df771ec-d34c-4a5b-9304-1ac9558023e3.sock\n",
-      "_=/bin/printenv\n",
-      "Average time = 250 ms for hierarchical aggregation with reno as default congestion control algorithm.\n",
-      "Average time = 250 ms for hierarchical aggregation with bbr as default congestion control algorithm.\n"
+      "VSCODE_IPC_HOOK_CLI=/run/user/1000/vscode-ipc-930594a3-61b3-4e06-8fc9-2b137b4b6c3f.sock\n",
+      "_=/bin/printenv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "grep: scratch/agg-reno-2000.log: No such file or directory\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average time = 0 ms for hierarchical aggregation with reno as default congestion control algorithm.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "grep: scratch/agg-reno-bbr-100.log: binary file matches\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average time = 0 ms for hierarchical aggregation with bbr as default congestion control algorithm.\n"
      ]
     }
    ],
@@ -73,13 +113,14 @@
     "# Zhuoxu: go into the ns3 directory\n",
     "cd ..\n",
     "# Zhuoxu: use the sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" expression to remove ANSI characters from the output\n",
-    "./ns3 clean 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/agg-reno-100.log\n",
-    "./ns3 configure --disable-werror 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" >> scratch/agg-reno-100.log\n",
-    "./ns3 run scratch/innetwork-test.cc -- --vsize=100 --topotype=1  2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" >> scratch/agg-reno-100.log\n",
+    "# ./ns3 clean 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/agg-reno-100.log\n",
+    "# ./ns3 configure --disable-werror 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" >> scratch/agg-reno-100.log\n",
+    "./ns3 run scratch/innetwork-test.cc -- --vsize=2000 --topotype=1  2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/agg-reno-100.log\n",
+    "\n",
     "printenv\n",
     "# process the log\n",
     "# Zhuoxu: Becareful of the $NF, do not use hard code. Otherwise, the time value will not be extracted correctly.\n",
-    "grep 'Innetwork aggregation completed' scratch/agg-reno-100.log | awk '{print $NF}' | sed 's/ms//' > tmptimes\n",
+    "grep 'Innetwork aggregation completed' scratch/agg-reno-2000.log | awk '{print $NF}' | sed 's/ms//' > tmptimes\n",
     "#delete first record, this record is inaccurate\n",
     "sed '1d' tmptimes > times\n",
     "# calculate avg\n",
@@ -87,7 +128,7 @@
     "echo \"Average time = $avg ms for hierarchical aggregation with reno as default congestion control algorithm.\"\n",
     "rm tmptimes times\n",
     "\n",
-    "./ns3 run scratch/innetwork-test.cc -- --vsize=100 --cc=bbr --topotype=1 > scratch/agg-reno-bbr-100.log 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\"\n",
+    "./ns3 run scratch/innetwork-test.cc -- --vsize=2000 --cc=bbr --topotype=1 > scratch/agg-reno-bbr-2000.log 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\"\n",
     "# process the log\n",
     "grep 'Innetwork aggregation completed' scratch/agg-reno-bbr-100.log | awk '{print $NF}' | sed 's/ms//' > tmptimes\n",
     "#delete first record, this record is inaccurate\n",
@@ -391,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "69e9a8b4",
    "metadata": {},
    "outputs": [
@@ -399,7 +440,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average time = 0 ms for bbr with direct topo\n"
+      "Average time = 0 ms for bbr with direct topo\n",
+      "Average time = 0 ms for reno with direct topo\n"
      ]
     }
    ],
