--- a/scratch/test.ipynb
+++ b/scratch/test.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "fe5c7b10",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "cd ..\n",
-    "# ./ns3 clean 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/agg-reno-100.log\n",
-    "# ./ns3 configure --disable-werror 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" >> scratch/agg-reno-100.log\n",
-    "./ns3 run scratch/innetwork-test.cc -- --vsize=30000 --topotype=1  2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/agg-reno-1110.log\n",
-    "# ./ns3 run scratch/innetwork-test.cc -- --vsize=3000 --topotype=1\n",
+    "#./ns3 clean 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/agg-reno-100.log\n",
+    "#./ns3 configure --disable-werror 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" >> scratch/agg-reno-100.log\n",
+    "#./ns3 run scratch/innetwork-test.cc -- --vsize=30000 --topotype=1  2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/agg-reno-1110.log\n",
+    "./ns3 run scratch/innetwork-test.cc -- --vsize=3000 --topotype=1 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/agg-reno-100.log\n",
     "#./ns3 run scratch/tcp-test.cc  2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/tcp-test.log\n"
    ]
   },
