Quic-Agg-v5.0: Add application memory constrained table, one vector inside per MTU, NOT send ACK when RecvBuff is full

--- a/scratch/test.ipynb
+++ b/scratch/test.ipynb
@@ -2,23 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fe5c7b10",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "cd ..\n",
+    "\n",
     "# ./ns3 clean 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/agg-reno-100.log\n",
     "# ./ns3 configure --disable-werror 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" >> scratch/agg-reno-100.log\n",
-    "./ns3 run scratch/innetwork-test.cc -- --vsize=3000 --topotype=1  2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/agg-reno-1110.log\n",
+    "./ns3 run scratch/innetwork-test.cc -- --vsize=200 --topotype=1  2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/agg-reno-1110.log\n",
     "#./ns3 run scratch/innetwork-test.cc -- --vsize=3000 --topotype=1 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/agg-reno-100.log\n",
     "#./ns3 run scratch/tcp-test.cc  2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/tcp-test.log\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
+   "id": "a1e22ff9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "cd ..\n",
+    "./ns3 clean 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/quic-agg-debug.log\n",
+    "./ns3 configure --disable-werror 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" >> scratch/quic-agg-debug.log\n",
+    "./ns3 build 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" >> scratch/quic-agg-debug.log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4a78041b",
    "metadata": {},
    "outputs": [
@@ -46,7 +61,7 @@
       "CLICOLOR=1\n",
       "VSCODE_L10N_BUNDLE_LOCATION=\n",
       "CLICOLOR_FORCE=1\n",
-      "SSH_CONNECTION=10.7.8.180 57283 192.168.1.183 22\n",
+      "SSH_CONNECTION=10.7.8.180 54045 192.168.1.183 22\n",
       "LESSCLOSE=/usr/bin/lesspipe %s %s\n",
       "XDG_SESSION_CLASS=user\n",
       "VSCODE_HANDLES_SIGPIPE=true\n",
@@ -58,21 +73,21 @@
       "SHLVL=1\n",
       "PAGER=cat\n",
       "VSCODE_CWD=/home/dd\n",
-      "XDG_SESSION_ID=4\n",
+      "XDG_SESSION_ID=212\n",
       "MPLBACKEND=module://matplotlib_inline.backend_inline\n",
       "LD_LIBRARY_PATH=/home/dd/ns-3-quic-agg-zhuoxu/ns-allinone-3.42/ns-3.42/build/lib\n",
       "XDG_RUNTIME_DIR=/run/user/1000\n",
       "SSL_CERT_FILE=/usr/lib/ssl/certs/ca-certificates.crt\n",
-      "SSH_CLIENT=10.7.8.180 57283 22\n",
-      "VSCODE_CLI_REQUIRE_TOKEN=3004464f-517f-458e-ad8e-9ab29f1af654\n",
+      "SSH_CLIENT=10.7.8.180 54045 22\n",
+      "VSCODE_CLI_REQUIRE_TOKEN=bc843799-bb95-4ea6-a74f-f896801af36e\n",
       "XDG_DATA_DIRS=/usr/local/share:/usr/share:/var/lib/snapd/desktop\n",
-      "BROWSER=/home/dd/.vscode-server/cli/servers/Stable-e8653663e8840adaf45af01eab5c627a5af81807/server/bin/helpers/browser.sh\n",
-      "PATH=/bin:/home/dd/.vscode-server/cli/servers/Stable-e8653663e8840adaf45af01eab5c627a5af81807/server/bin/remote-cli:/home/dd/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin:/home/dd/.vscode-server/cli/servers/Stable-e8653663e8840adaf45af01eab5c627a5af81807/server/bin/remote-cli:/home/dd/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin\n",
+      "BROWSER=/home/dd/.vscode-server/cli/servers/Stable-f1a4fb101478ce6ec82fe9627c43efbf9e98c813/server/bin/helpers/browser.sh\n",
+      "PATH=/bin:/home/dd/.vscode-server/cli/servers/Stable-f1a4fb101478ce6ec82fe9627c43efbf9e98c813/server/bin/remote-cli:/home/dd/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin:/home/dd/.vscode-server/cli/servers/Stable-f1a4fb101478ce6ec82fe9627c43efbf9e98c813/server/bin/remote-cli:/home/dd/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin\n",
       "DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus\n",
-      "VSCODE_NLS_CONFIG={\"userLocale\":\"en\",\"osLocale\":\"en\",\"resolvedLanguage\":\"en\",\"defaultMessagesFile\":\"/home/dd/.vscode-server/cli/servers/Stable-e8653663e8840adaf45af01eab5c627a5af81807/server/out/nls.messages.json\",\"locale\":\"en\",\"availableLanguages\":{}}\n",
+      "VSCODE_NLS_CONFIG={\"userLocale\":\"en\",\"osLocale\":\"en\",\"resolvedLanguage\":\"en\",\"defaultMessagesFile\":\"/home/dd/.vscode-server/cli/servers/Stable-f1a4fb101478ce6ec82fe9627c43efbf9e98c813/server/out/nls.messages.json\",\"locale\":\"en\",\"availableLanguages\":{}}\n",
       "VSCODE_HANDLES_UNCAUGHT_ERRORS=true\n",
       "OLDPWD=/home/dd/ns-3-quic-agg-zhuoxu/ns-allinone-3.42/ns-3.42/scratch\n",
-      "VSCODE_IPC_HOOK_CLI=/run/user/1000/vscode-ipc-0ee6a536-5dad-4f6f-bc13-e86f35af18c9.sock\n",
+      "VSCODE_IPC_HOOK_CLI=/run/user/1000/vscode-ipc-1d7a8f77-3fc5-4fe8-b49a-0ee79d552575.sock\n",
       "_=/bin/printenv\n"
      ]
     },
@@ -88,7 +103,21 @@
      "output_type": "stream",
      "text": [
       "Average time = 0 ms for hierarchical aggregation with reno as default congestion control algorithm.\n",
-      "Error while terminating subprocess (pid=13209): \n"
+      "Error while terminating subprocess (pid=893508): \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "grep: scratch/agg-reno-bbr-100.log: No such file or directory\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average time = 0 ms for hierarchical aggregation with bbr as default congestion control algorithm.\n"
      ]
     }
    ],
