--- a/scratch/test.ipynb
+++ b/scratch/test.ipynb
@@ -2,13 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "fe5c7b10",
+   "execution_count": 26,
+   "id": "6685ec01",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LD_LIBRARY_PATH is set to: /home/dd/tcp-agg/ns-allinone-3.42/ns-3.42/build/lib:/home/dd/ns-3-quic-agg-zhuoxu/ns-allinone-3.42/ns-3.42/build/lib\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "cd ..\n",
+    "\n",
+    "# Get the current working directory\n",
+    "CURRENT_DIR=$(pwd)\n",
+    "\n",
+    "# Set the LD_LIBRARY_PATH environment variable\n",
+    "export LD_LIBRARY_PATH=$CURRENT_DIR/build/lib:$LD_LIBRARY_PATH\n",
+    "\n",
+    "# Print the LD_LIBRARY_PATH for verification\n",
+    "echo \"LD_LIBRARY_PATH is set to: $LD_LIBRARY_PATH\"\n",
+    "\n",
+    "./waf --run scratch/tcp-bulk-send 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/tcp-bulk-send.log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "fe5c7b10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LD_LIBRARY_PATH is set to: /home/dd/tcp-agg/ns-allinone-3.42/ns-3.42/build/lib:/home/dd/ns-3-quic-agg-zhuoxu/ns-allinone-3.42/ns-3.42/build/lib\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash                                  \n",
+    "cd ..\n",
+    "\n",
+    "# Get the current working directory\n",
+    "CURRENT_DIR=$(pwd)\n",
+    "\n",
+    "# Set the LD_LIBRARY_PATH environment variable\n",
+    "export LD_LIBRARY_PATH=$CURRENT_DIR/build/lib:$LD_LIBRARY_PATH\n",
+    "\n",
+    "# Print the LD_LIBRARY_PATH for verification\n",
+    "echo \"LD_LIBRARY_PATH is set to: $LD_LIBRARY_PATH\"\n",
     "\n",
     "# ./ns3 clean 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/agg-reno-100.log\n",
     "# ./ns3 configure --disable-werror 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" >> scratch/agg-reno-100.log\n",
@@ -19,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a1e22ff9",
    "metadata": {},
    "outputs": [],
