TCP-Agg v-4.0: Change the data structure from unorder_map to map and the deadlock problem is solved. We also add a 'CheckQueueOrder' function in order to make sure that the aggregation is completed in a sequence order, and don't have any disorder.

--- a/scratch/test.ipynb
+++ b/scratch/test.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "fe5c7b10",
    "metadata": {},
    "outputs": [
@@ -59,23 +59,44 @@
     "\n",
     "# ./ns3 clean 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/agg-reno-100.log\n",
     "# ./ns3 configure --disable-werror 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" >> scratch/agg-reno-100.log\n",
-    "./ns3 run scratch/innetwork-test.cc -- --vsize=200 --topotype=1  2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/tcp-testing.log\n",
+    "./ns3 run scratch/innetwork-test.cc -- --vsize=200 --topotype=1  2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > log/tcp-testing.log\n",
     "#./ns3 run scratch/innetwork-test.cc -- --vsize=3000 --topotype=1 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/agg-reno-100.log\n",
     "#./ns3 run scratch/tcp-test.cc  2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/tcp-test.log\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a1e22ff9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LD_LIBRARY_PATH is set to: /home/dd/tcp-agg/ns-allinone-3.42/ns-3.42/build/lib:/home/dd/ns-3-quic-agg-zhuoxu/ns-allinone-3.42/ns-3.42/build/lib\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "cd ..\n",
-    "./ns3 clean 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/quic-agg-debug.log\n",
-    "./ns3 configure --disable-werror 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" >> scratch/quic-agg-debug.log\n",
-    "./ns3 build 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/quic-agg-debug.log"
+    "./ns3 clean 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > log/ns3-clean-config.log\n",
+    "./ns3 configure --disable-werror 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" >> log/ns3-clean-config.log\n",
+    "./ns3 build 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > log/ns3-build.log\n",
+    "\n",
+    "# Get the current working directory\n",
+    "CURRENT_DIR=$(pwd)\n",
+    "\n",
+    "# Set the LD_LIBRARY_PATH environment variable\n",
+    "export LD_LIBRARY_PATH=$CURRENT_DIR/build/lib:$LD_LIBRARY_PATH\n",
+    "\n",
+    "# Print the LD_LIBRARY_PATH for verification\n",
+    "echo \"LD_LIBRARY_PATH is set to: $LD_LIBRARY_PATH\"\n",
+    "\n",
+    "# ./ns3 clean 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/agg-reno-100.log\n",
+    "# ./ns3 configure --disable-werror 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" >> scratch/agg-reno-100.log\n",
+    "./ns3 run scratch/innetwork-test.cc -- --vsize=200 --topotype=1  2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > log/tcp-testing.log"
    ]
   },
   {
