TCP-Agg v-8.0: (1)Simplify the log output. (2)Be able to run multiple files and iterations at one time. (3)Fix some bugs declear on 'debug_1.8+.md' file.

--- a/scratch/test.ipynb
+++ b/scratch/test.ipynb
@@ -32,7 +32,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
+   "id": "9cffb8dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LD_LIBRARY_PATH is set to: /home/dd/tcp-agg/ns-allinone-3.42/ns-3.42/build/lib:/home/dd/ns-3-quic-agg-zhuoxu/ns-allinone-3.42/ns-3.42/build/lib\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "cd ..\n",
+    "\n",
+    "# Get the current working directory\n",
+    "CURRENT_DIR=$(pwd)\n",
+    "\n",
+    "# Set the LD_LIBRARY_PATH environment variable\n",
+    "export LD_LIBRARY_PATH=$CURRENT_DIR/build/lib:$LD_LIBRARY_PATH\n",
+    "\n",
+    "# Print the LD_LIBRARY_PATH for verification\n",
+    "echo \"LD_LIBRARY_PATH is set to: $LD_LIBRARY_PATH\"\n",
+    "\n",
+    "# ./ns3 clean 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > log/ns3-clean-config.log\n",
+    "# ./ns3 configure --disable-werror 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" >> log/ns3-clean-config.log\n",
+    "# ./ns3 build 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > log/ns3-build.log\n",
+    "\n",
+    "./ns3 run scratch/debug.cc 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > scratch/debug-cc.log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "fe5c7b10",
    "metadata": {},
    "outputs": [
@@ -101,15 +135,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "20a6bfdd",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "cd ..\n",
-    "./ns3 clean 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > log/ns3-clean-config.log\n",
-    "./ns3 configure --disable-werror 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" >> log/ns3-clean-config.log\n",
+    "# ./ns3 clean 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > log/ns3-clean-config.log\n",
+    "# ./ns3 configure --disable-werror 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" >> log/ns3-clean-config.log\n",
     "./ns3 build 2>&1 | sed -r \"s/\\x1B\\[[0-9;]*[mK]//g\" > log/ns3-build.log\n",
     "# just for project re-build."
    ]
